Prepared functionality to park vehicle